# domain-hunter

./: .gitignore  Cargo.toml  Makefile  TODO.md  example.env
data/: bad-words.sql  domain-hunter.duckdb
docker/: docker-compose.yaml  otel-collector-config.yaml
docker/data/: grpc.json
src/: main.rs
src/data/: TODO.txt
src/util/: mod.rs  tracing.rs
src/util/db/: duck.rs  duck_init.dev.sql  duck_init.prod.sql
src/util/tracing/: otel.rs
src/web_driver/: expired_domains.rs  mod.rs
