[package]
name = "domain-hunter"
version = "0.2.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
# aws-sdk-route53domains = "1.56.0"
# cloudflare = "0.11.0"
duckdb = { version = "1.1.1", features = ["chrono", "serde_json", "url", "r2d2", "uuid", "vtab-full"] }
gethostname = "0.5.0"
itertools = "0.14.0"
opentelemetry = { version = "0.27.1", default-features = false, features = ["trace"] }
opentelemetry-http = "0.27.0"
opentelemetry-otlp = { version =  "0.27.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
rand = "0.8.5"
scraper = "0.22.0"
thirtyfour = "0.35.0"
tokio = { version = "1.43.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-roots"]}
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }

[dev-dependencies]
mockall = "0.13.1"

[profile.release] # cargo build --release
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.release-debug] # cargo build --profile release-debug
inherits = "release"
debug = true
strip = "none"

[profile.dev] # cargo build
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
# Set the settings for build scripts and proc-macros.
# [profile.dev.build-override] 
# opt-level = 3

# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
# Set the default for dependencies.
# [profile.dev.package."*"]
# opt-level = 2